# Connecto

./: .gitignore  Makefile  README.md  REMEMBER.md  generate-secrets.py
.github/: _dependabot.yml
backend/: .env.example  .env.test  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: __init__.py  auth.py  circle_members.py  circles.py  dashboard.py  post_comments.py  post_likes.py  posts.py  search.py  users.py
backend/app/core/: __init__.py  config.py  error_handlers.py  security.py  security_headers.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  circle.py  circle_member.py  comment.py  post.py  post_like.py  role.py  session.py  user.py
backend/app/repositories/: __init__.py  circle_repository.py  post_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  social.py
backend/app/schemas/auth/: __init__.py  requests.py  responses.py
backend/app/schemas/circles/: __init__.py  circle_members.py  join.py  requests.py  responses.py
backend/app/services/: __init__.py  circle_member_service.py  circle_service.py  dashboard_service.py  post_service.py  search_service.py  user_service.py
backend/app/utils/: pagination.py
backend/scripts/: create_db.py  reset_db.py  seed.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_circle_members.py  test_circles.py  test_dashboard.py  test_full_flow.py  test_full_negative_flow.py  test_posts.py  test_users.py
backend/tests/unit/: conftest.py  test_auth_schemas.py  test_models.py  test_security.py
(+151 files in other folders)
