[project]
name = "backend"
version = "0.1.0"
description = "Clean FastAPI backend for DiscSecOps"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.136.0",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.45.0",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.12.1",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.26",
    "aiosqlite>=0.22.1",  # pentru SQLite async
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"**/api/**/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "tests/",
]
ignore_missing_imports = true
